The applet mysteriously works

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Play Pente!</title>
     
     <body>
-        <applet code="PenteApplet.class" archive="build/jars/pente.jar" width=300 height=300></applet>
+        <applet code="pente.PenteApplet.class" archive="lib/pente.jar" width=500 height=500></applet>
     </body>
 </html>
