Can now play a game in the browser

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
     <meta charset="utf-8"/>
     <title>Play Pente!</title>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+    </head>
     
     <body>
-        <applet code="pente.PenteApplet.class" archive="lib/pente.jar" width=500 height=500></applet>
+        <div class="board">
+            <applet code="pente.PenteApplet.class" archive="lib/pente.jar" width=580 height=580></applet>
+        </div>
     </body>
 </html>
